#14 rename the 4th template file

--- a/geospaas_adas_viewer/templates/adas_viewer/ds_info_adas.html
+++ b/geospaas_adas_viewer/templates/adas_viewer/ds_info_adas.html
@@ -1,6 +1,6 @@
-{% extends "base_viewer/elements.html" %}
+{% extends "base_viewer/ds_info.html" %}
 ##############################################################################################################
-{% block ds_info %}
+{% block ds_info_adas %}
 
 <div class="attr_title">Title:</div>
 <div class="attr_content">{{ ds.entry_id}} </div>
@@ -20,4 +20,4 @@
 {% endfor %}
 {% endif %}
 
-{% endblock ds_info %}
+{% endblock ds_info_adas %}
