--- a/geospaas_adas_viewer/templates/adas_viewer/ds_info_adas.html
+++ b/geospaas_adas_viewer/templates/adas_viewer/ds_info_adas.html
@@ -1,6 +1,6 @@
 {% extends "base_viewer/ds_info.html" %}
 ##############################################################################################################
-{% block ds_info_adas %}
+{% block ds_detailed_info %}
 
 <div class="attr_title">Title:</div>
 <div class="attr_content">{{ ds.entry_id}} </div>
@@ -20,4 +20,4 @@
 {% endfor %}
 {% endif %}
 
-{% endblock ds_info_adas %}
+{% endblock ds_detailed_info %}
